--- a/index.html
+++ b/index.html
@@ -117,21 +117,22 @@
 </div>
 
 
-        <!-- Java Development Projects -->
-        <!-- <div class="project-category">
+       Java Development Projects 
+        <div class="project-category">
           <h3 class="category-title">☕ Java Development Projects</h3>
           <div class="projects-grid">
             <div class="project-card">
-              <div class="project-image">🏦</div>
-              <h3>Banking Management System</h3>
-              <p>
-                Enterprise-level banking application using Spring Boot,
-                Hibernate, and MySQL with advanced security features and
-                transaction management.
-              </p>
-              <a href="#" class="project-link">View Project</a>
-            </div>
-            <div class="project-card">
+             <div class="project-image">🔠</div>
+              <h3>Trie-Based AutoSuggest System</h3>
+                <p>
+                   A Java-based autocomplete and autosuggest system with a GUI built using
+                   Swing. Implements Trie data structure for efficient word predictions,
+                   search history tracking, and dark mode support.
+                  </p>
+                  <a href="https://github.com/Adarshkaintura/TrieBased-AutoSuggest" class="project-link" target="_blank">View Project</a>
+                  </div>
+
+           <!--  <div class="project-card">
               <div class="project-image">📊</div>
               <h3>REST API Framework</h3>
               <p>
@@ -158,10 +159,10 @@
                 processing, risk management, and automated trading strategies
                 using Java 11+.
               </p>
-              <a href="#" class="project-link">View Project</a>
+              <a href="#" class="project-link">View Project</a>-->
             </div>
           </div>
-        </div> -->
+        </div> 
 
         <!-- Machine Learning Projects -->
         <div class="project-category">
